--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main {
 
 a {
   text-decoration: none;
-  color: rgb(206, 206, 206);
+  color: rgb(255, 0, 0);
 }
 
 h1,
@@ -44,7 +44,7 @@ p {
   height: 300px;
 }
 
-#bookmark-button {
+.bookmark-button {
   background-color: #ffcc00;
   border: none;
   padding: 10px;
@@ -52,6 +52,6 @@ p {
   font-size: 16px;
   width: 10rem;
 }
-#bookmark-button:hover {
+.bookmark-button:hover {
   background-color: #e6b800;
 }
